--- a/components/sidebar.html
+++ b/components/sidebar.html
@@ -1,4 +1,4 @@
-<!-- components/sidebar.html - VERSÃO ATUALIZADA COM NOVOS MÓDULOS -->
+<!-- components/sidebar.html - VERSÃO ATUALIZADA COM O MÓDULO DE INSTALAÇÃO -->
 <aside class="app-sidebar">
     
     <!-- Seção do Cabeçalho da Sidebar com a Logo -->
@@ -9,7 +9,7 @@
         </a>
     </div>
 
-    <!-- Seção da Navegação Principal -->
+    <!-- Seção da Navegação Principal com a nova ordem -->
     <nav class="sidebar-nav">
         <ul>
             <li>
@@ -18,28 +18,35 @@
                     <span>Início</span>
                 </a>
             </li>
-            <!-- ALTERADO: Nome e Ícone -->
+            
             <li>
                 <a href="/painel.html">
                     <i class="fas fa-palette"></i>
-                    <span>Pedidos de Arte</span>
+                    <span>Arte</span>
                 </a>
             </li>
-            <!-- NOVO: Link para Impressão -->
+            
             <li>
                 <a href="/impressao/painel.html">
                     <i class="fas fa-print"></i>
                     <span>Impressão</span>
                 </a>
             </li>
-            <!-- NOVO: Link para Acabamento -->
+            
             <li>
                 <a href="/acabamento/acabamento.html">
                     <i class="fas fa-cut"></i>
                     <span>Acabamento</span>
                 </a>
             </li>
-            <!-- MANTIDO: Link para Financeiro -->
+            
+            <li>
+                <a href="/instalacao/painel.html">
+                    <i class="fas fa-wrench"></i>
+                    <span>Instalação</span>
+                </a>
+            </li>
+            
             <li>
                 <a href="/financeiro.html">
                     <i class="fas fa-dollar-sign"></i>
