--- a/components/sidebar.html
+++ b/components/sidebar.html
@@ -1,7 +1,7 @@
-<!-- components/sidebar.html - VERSÃO ATUALIZADA COM O MÓDULO DE INSTALAÇÃO -->
+<!-- components/sidebar.html -->
 <aside class="app-sidebar">
     
-    <!-- Seção do Cabeçalho da Sidebar com a Logo -->
+    <!-- Cabeçalho (Logo) -->
     <div class="sidebar-header">
         <a href="/dashboard.html" class="logo-link">
             <img src="/images/logo-fundo-claro-100x100.png" alt="Logo Setor de Arte" class="sidebar-logo">
@@ -9,7 +9,7 @@
         </a>
     </div>
 
-    <!-- Seção da Navegação Principal com a nova ordem -->
+    <!-- Navegação Principal (Meio - Expansível) -->
     <nav class="sidebar-nav">
         <ul>
             <li>
@@ -53,21 +53,24 @@
                     <span>Financeiro</span>
                 </a>
             </li>
+        </ul>
+    </nav>
 
-            <!-- Links Desativados -->
-            <li class="nav-separator"></li>
+    <!-- Rodapé da Sidebar (Fixado em baixo) -->
+    <div class="sidebar-footer">
+        <ul>
             <li>
-                <a href="#" class="disabled">
-                    <i class="fas fa-user-cog"></i>
+                <a href="/meus-dados.html">
+                    <i class="fas fa-user-circle"></i>
                     <span>Meu Perfil</span>
                 </a>
             </li>
             <li>
-                <a href="#" class="disabled">
-                    <i class="fas fa-question-circle"></i>
+                <a href="https://instagram.com/vgdior" target="_blank">
+                    <i class="fab fa-instagram"></i>
                     <span>Ajuda</span>
                 </a>
             </li>
         </ul>
-    </nav>
+    </div>
 </aside>
