--- a/components/sidebar.html
+++ b/components/sidebar.html
@@ -66,7 +66,7 @@
                 </a>
             </li>
             <li>
-                <a href="https://instagram.com/vgdior" target="_blank">
+                <a href="https://instagram.com/setordearte" target="_blank">
                     <i class="fab fa-instagram"></i>
                     <span>Ajuda</span>
                 </a>
