--- a/components/sidebar.html
+++ b/components/sidebar.html
@@ -20,6 +20,13 @@
             </li>
             
             <li>
+                <a href="/crm.html">
+                    <i class="fas fa-handshake"></i>
+                    <span>CRM</span>
+                </a>
+            </li>
+
+            <li>
                 <a href="/painel.html">
                     <i class="fas fa-palette"></i>
                     <span>Arte</span>
