--- a/components/sidebar.html
+++ b/components/sidebar.html
@@ -20,6 +20,13 @@
             </li>
             
             <li>
+                <a href="/carteira.html">
+                    <i class="fas fa-wallet"></i>
+                    <span>Carteira</span>
+                </a>
+            </li>
+
+            <li>
                 <a href="/crm.html">
                     <i class="fas fa-handshake"></i>
                     <span>CRM</span>
