--- a/components/sidebar.html
+++ b/components/sidebar.html
@@ -57,7 +57,15 @@
             <li>
                 <a href="/instalacao/painel.html">
                     <i class="fas fa-wrench"></i>
-                    <span>Instalação</span>
+                    <span>Instalação Ext.</span>
+                </a>
+            </li>
+
+            <!-- NOVO LINK ADICIONADO AQUI -->
+            <li>
+                <a href="/instalacao-loja/painel.html">
+                    <i class="fas fa-store"></i>
+                    <span>Instalação Loja</span>
                 </a>
             </li>
             
